# tejoy

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  compileCommands.json  documentations  dump_codebase.bash  faq.html  generate_api.py  index.html  mkdocs.yml  mkdocs_hooks.py  sitemap.xml  versions.json  zensical.toml
.github/workflows/: docs.yml
0.1.5/: 404.html  index.html  search.json  sitemap.xml
0.1.5/api/: index.html
0.1.5/api/tejoy/: index.html
0.1.5/api/tejoy/Node/: index.html
0.1.5/examples/: index.html
0.1.5/examples/basic_node_usage/: index.html
0.1.5/faq/: index.html
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/examples/: index.html
0.1.6/examples/basic_node_usage/: index.html
0.1.6/faq/: index.html
:Enter/: 404.html  index.html  search.json  sitemap.xml
:Enter/api/: index.html
:Enter/api/tejoy/: index.html
:Enter/api/tejoy/Node/: index.html
:Enter/api/tejoy/detail/: index.html
:Enter/api/tejoy/events/: index.html
:Enter/examples/: index.html
:Enter/examples/basic_node_usage/: index.html
:Enter/faq/: index.html
api/: index.html
api/tejoy/: index.html
api/tejoy/Node/: index.html
cmake/: FindSodium.cmake  tejoyConfig.cmake.in
cmake/include/tejoy/: version.hpp.in
docs/: .abbreviations  api.md  faq.md  index.md
docs/examples/: basic_node_usage.md  index.md
docs/guide/: install.md  user_id_usage.md
docs/overrides/partials/: comments.html
examples/: CMakeLists.txt  basic_node_usage.cpp  basic_node_usage.html  index.html  usage.cpp  user_id_usage.cpp
include/: config.hpp
include/tejoy/: node.hpp  user.hpp  user_code_helper.hpp
include/tejoy/detail/: json_variant.hpp  update_types.hpp
include/tejoy/detail/modules/: ack_module.hpp  contacts_module.hpp  discovery_module.hpp  log_module.hpp  module.hpp  module_manager.hpp  network.hpp  network_module.hpp  pairing_module.hpp  ping_module.hpp  update_manager_module.hpp
include/tejoy/events/: contacts.hpp  data_requests.hpp  discovery.hpp  errors.hpp  log.hpp  message.hpp  network.hpp  others.hpp  ping.hpp
include/tejoy/events/detail/: multicast.hpp  network.hpp  packets.hpp  update_processor.hpp  updates.hpp
libs/base64/: CMakeLists.txt
libs/base64/include/: base64.hpp
libs/base64/include/base64/: base64.hpp
libs/base64/src/: base64.cpp
libs/event_system/: CMakeLists.txt
libs/event_system/include/event_system/: event.hpp  event_bus.hpp  subscriber.hpp
libs/event_system/src/: event_bus.cpp
libs/eventbus/include/eventbus/: event.hpp  event_bus.hpp  subscriber.hpp
libs/eventbus/src/: eventbus.cpp
libs/secret_box/: CMakeLists.txt
libs/secret_box/include/: secret_box.hpp
libs/secret_box/include/secret_box/: secret_box.hpp
libs/secret_box/src/: secret_box.cpp
libs/simple_input_output/include/: simple_io.hpp
libs/simple_input_output/src/: simple_io.cpp
libs/simple_io/: CMakeLists.txt
libs/simple_io/include/: simple_io.hpp
libs/simple_io/include/simple_io/: simple_io.hpp
libs/storage/: CMakeLists.txt
libs/storage/include/: storage.hpp
libs/storage/include/storage/: storage.hpp
libs/storage/src/: storage.cpp
libs/tejoy/: CMakeLists.txt
libs/tejoy/include/tejoy/: node.hpp  user.hpp
libs/tejoy/src/: node.cpp
libs/udp/: CMakeLists.txt
libs/udp/include/: udp.hpp
libs/udp/include/udp/: udp.hpp
libs/udp/src/: udp.cpp
search/: search_index.js  search_index.json
src/: CMakeLists.txt  main.cpp  node.cpp  user.cpp  user_code_helper.cpp
src/detail/modules/: ack_module.cpp  contacts_module.cpp  discovery_module.cpp  log_module.cpp  module_manager.cpp  network_module.cpp  pairing_module.cpp  ping_module.cpp  update_manager_module.cpp
src/modules/: network.cpp
v0.1.5/: 404.html  index.html  sitemap.xml
v0.1.5/api/: index.html
v0.1.5/api/tejoy/: index.html
v0.1.5/api/tejoy/Node/: index.html
v0.1.5/examples/: index.html
v0.1.5/examples/basic_node_usage/: index.html
v0.1.5/faq/: index.html
v0.1.6/: 404.html  index.html  search.json  sitemap.xml
v0.1.6/api/: index.html
v0.1.6/api/tejoy/: index.html
v0.1.6/api/tejoy/Node/: index.html
v0.1.6/examples/: index.html
v0.1.6/examples/basic_node_usage/: index.html
v0.1.6/faq/: index.html
v0.1.7/: 404.html  index.html  search.json  sitemap.xml
v0.1.7/api/: index.html
v0.1.7/api/tejoy/: index.html
v0.1.7/api/tejoy/Node/: index.html
v0.1.7/examples/: index.html
v0.1.7/examples/basic_node_usage/: index.html
v0.1.7/faq/: index.html
v0.2.0/: 404.html  index.html  search.json  sitemap.xml
v0.2.0/api/: index.html
v0.2.0/api/tejoy/: index.html
v0.2.0/api/tejoy/Node/: index.html
v0.2.0/api/tejoy/detail/: index.html
v0.2.0/api/tejoy/events/: index.html
v0.2.0/examples/: index.html
v0.2.0/examples/basic_node_usage/: index.html
v0.2.0/faq/: index.html
v0.2.1/: .abbreviations  404.html  index.html  search.json  sitemap.xml
v0.2.1/api/: index.html
v0.2.1/api/tejoy/: index.html
v0.2.1/api/tejoy/Node/: index.html
v0.2.1/api/tejoy/detail/: index.html
v0.2.1/api/tejoy/events/: index.html
v0.2.1/examples/basic_node_usage/: index.html
v0.2.1/faq/: index.html
v0.2.1/guide/install/: index.html
v0.2.2/: 404.html  index.html  search.json  sitemap.xml
v0.2.2/api/: index.html
v0.2.2/api/tejoy/: index.html
v0.2.2/api/tejoy/Node/: index.html
v0.2.2/examples/basic_node_usage/: index.html
v0.2.2/faq/: index.html
v0.2.2/guide/install/: index.html
v0.3.0/: 404.html  index.html  search.json  sitemap.xml
v0.3.0/api/: index.html
v0.3.0/api/errors/: index.html
v0.3.0/api/tejoy/: index.html
v0.3.0/examples/basic_node_usage/: index.html
v0.3.0/faq/: index.html
v0.3.0/guide/install/: index.html
v0.3.0/guide/user_id_usage/: index.html
v0.3.0/javascripts/: tablesort.js
v0.3.0/overrides/: home.html
v1.2.3/: 404.html  index.html  search.json  sitemap.xml
v1.2.3/api/: index.html
v1.2.3/api/tejoy/: index.html
v1.2.3/examples/: index.html
v1.2.3/examples/basic_node_usage/: index.html
v1.2.3/faq/: index.html
(+63 files in other folders)
